güvenlik denetiminde bulunan açıklar kapatıldı kapatıldı
